[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    # "S",
    "BLE",
    "FBT",
    "B",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "FIX",
    "ERA",
    "PL",
    "FLY",
    "RUF",
]
ignore = [
    "E501",
    "PTH123",
    "D105",
    "ANN101",
    "PLR0913", # Too many arguments
    "G004", # Logging f-strings
    "UP007", # Use X | Y annotations
    "ANN401", # Dynamically typed expressions
    "RET505", # Unnecessary control structures
    "COM812", # Trailing commas
]
exclude = [
    "node.py",
    "pysolarwinds/entities/__init__.py",
]
line-length = 88
target-version = "py39"

[tool.ruff.pydocstyle]
convention = "google"