[metadata]
name = solarwinds-python
version = 0.0.1
author = Austin de Coup-Crank
author_email = austin.decoupcrank@moodys.com
description = An ergonomic wrapper for OrionSDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decoupca/solarwinds-python
project_urls =
    Bug Tracker = https://github.com/decoupca/solarwinds-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[tool.isort]
profile = "black"

[flake8]
max-line-length = 88
extend-ignore = E203
